<resources>
    <string name="app_name">Practica 03</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="cognom">Cognom</string>
    <string name="title">Introduir nou registre</string>
    <string name="nom">Nom</string>
    <string name="sexe_title">Sexe</string>
    <string name="estat_title">Estat</string>
    <string name="estudis_title">Estudis</string>
    <string name="pes_title">Pes</string>
    <string name="naixement_title">Data de naixement</string>
    <string name="data">Data</string>
    <string name="submit_button">Envia</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="resultats">Registre complet</string>

</resources>
